usrchglog.md文字说明v1.6: 项目和构建工具的说明性文档