@@ -1,209 +1,250 @@
-# XNote 项目编译环境说明
+# XNote 项目构建环境说明
 
-本文档记录了 XNote Android 记事本项目的完整编译环境配置和工具版本信息。
+## 🛠️ 开发环境要求
 
-## 系统环境
+### 系统要求
+- **操作系统**: Windows 10+, macOS 10.14+, Ubuntu 18.04+ 或其他 Linux 发行版
+- **内存**: 8GB RAM 最低，16GB RAM 推荐
+- **存储**: 至少 10GB 可用空间
+- **网络**: 稳定的互联网连接（用于下载依赖）
 
-- **操作系统**: Linux 5.15.146.1-microsoft-standard-WSL2 (Ubuntu on WSL2)
-- **架构**: amd64
+### 核心工具版本
 
-## 核心开发工具
+#### Java 开发环境
+```bash
+# Java 版本要求
+Java: OpenJDK 17.0.16+
+JVM: OpenJDK 64-Bit Server VM
+Provider: Ubuntu/Eclipse Temurin
+Target: JVM 1.8 (兼容性)
+```
 
-### Java 开发环境
-- **Java 版本**: OpenJDK 17.0.16
-- **JVM**: OpenJDK 64-Bit Server VM (build 17.0.16+8-Ubuntu-0ubuntu122.04.1)
-- **编译模式**: mixed mode, sharing
+#### Android 开发工具
+```bash
+# Android Studio
+Android Studio: 2022.3+ (Giraffe)
+Build Tools: 33.0.0
+Platform Tools: 33.0.3
+```
 
-### Gradle 构建工具
-- **Gradle 版本**: 7.6
-- **构建时间**: 2022-11-25 13:35:10 UTC
-- **修订版本**: daece9dbc5b79370cc8e4fd6fe4b2cd400e150a8
-- **安装位置**: ~/gradle/gradle-7.6
-- **Kotlin 版本**: 1.7.10
-- **Groovy 版本**: 3.0.13
-- **Ant 版本**: Apache Ant(TM) version 1.10.11 (compiled on July 10 2021)
+#### Gradle 构建系统
+```bash
+# Gradle 配置
+Gradle: 7.6
+Gradle Plugin: 7.4.0
+Kotlin: 1.7.10
+Groovy: 3.0.13
+Apache Ant: 1.10.11
+```
 
-### Android 开发环境
-- **Android Gradle Plugin**: 7.4.0
-- **Kotlin Gradle Plugin**: 1.7.10
-- **编译 SDK**: API 33 (Android 13)
-- **目标 SDK**: API 33 (Android 13)
-- **最低 SDK**: API 24 (Android 7.0)
-- **Build Tools**: 30.0.3
+#### Android SDK 配置
+```bash
+# SDK 版本
+Compile SDK: 33 (Android 13)
+Target SDK: 33 (Android 13)
+Min SDK: 24 (Android 7.0)
+Build Tools: 33.0.0
+```
 
-## 项目依赖版本
+## 📦 项目依赖详单
 
-### Android 核心库
+### 核心 Android 依赖
 ```gradle
+// Android 核心库
 androidx.core:core-ktx:1.9.0
 androidx.appcompat:appcompat:1.6.1
 com.google.android.material:material:1.8.0
 androidx.constraintlayout:constraintlayout:2.1.4
+androidx.recyclerview:recyclerview:1.3.0
 ```
 
-### UI 组件
+### 架构组件依赖
 ```gradle
-androidx.recyclerview:recyclerview:1.3.0
+// MVVM 架构组件
+androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2
+androidx.lifecycle:lifecycle-livedata-ktx:2.6.2
 androidx.activity:activity-ktx:1.7.2
 androidx.fragment:fragment-ktx:1.6.1
 ```
 
-### 架构组件
+### 数据存储依赖
 ```gradle
-androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2
-androidx.lifecycle:lifecycle-livedata-ktx:2.6.2
-```
-
-### 数据库
-```gradle
+// Room 数据库
 androidx.room:room-runtime:2.5.0
 androidx.room:room-ktx:2.5.0
 androidx.room:room-compiler:2.5.0 (kapt)
-```
 
-### 其他库
-```gradle
+// JSON 序列化
 com.google.code.gson:gson:2.10.1
-com.github.bumptech.glide:glide:4.14.2
 ```
 
-### 测试库
+### 多媒体处理依赖
 ```gradle
+// 图片加载
+com.github.bumptech.glide:glide:4.14.2
+
+// 音频播放
+androidx.media3:media3-exoplayer:1.0.2
+androidx.media3:media3-common:1.0.2
+```
+
+### 文件处理依赖
+```gradle
+// ZIP 文件处理
+net.lingala.zip4j:zip4j:2.11.5
+
+// 安全加密
+androidx.security:security-crypto:1.1.0-alpha06
+```
+
+### 测试依赖
+```gradle
+// 单元测试
 junit:junit:4.13.2
+
+// Android 测试
 androidx.test.ext:junit:1.1.5
 androidx.test.espresso:espresso-core:3.5.1
 ```
 
-## Kotlin 配置
+## 🔧 构建配置
 
-### 编译器版本
-- **Kotlin 编译器**: 1.7.10
-- **JVM 目标**: 1.8
-- **标准库版本强制统一**: 1.7.10
+### Gradle 配置文件
 
-### 依赖解析策略
+#### 项目级 build.gradle
 ```gradle
-configurations.all {
-    resolutionStrategy {
-        force 'org.jetbrains.kotlin:kotlin-stdlib:1.7.10'
-        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10'
-        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10'
+buildscript {
+    ext.kotlin_version = '1.7.10'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
     }
 }
 ```
 
-## 编译特殊配置
-
-### Java 兼容性
+#### 应用级 build.gradle
 ```gradle
-compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+}
+
+android {
+    namespace 'com.example.xnote'
+    compileSdk 33
+    
+    defaultConfig {
+        applicationId "com.example.xnote"
+        minSdk 24
+        targetSdk 33
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    
+    buildFeatures {
+        viewBinding true
+    }
 }
 ```
 
-### Gradle JVM 参数
-```properties
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
-```
+## 🚀 构建命令
 
-### ViewBinding
-```gradle
-buildFeatures {
-    viewBinding true
-}
-```
-
-### KAPT 处理器
-- **Room 编译器**: androidx.room:room-compiler:2.5.0
-
-## 权限配置
-
-### 应用权限
-- `android.permission.RECORD_AUDIO` - 录音功能
-- `android.permission.WRITE_EXTERNAL_STORAGE` - 外部存储写入
-- `android.permission.READ_EXTERNAL_STORAGE` - 外部存储读取
-- `android.permission.CAMERA` - 相机拍照
-
-### FileProvider 配置
-- **Authority**: ${applicationId}.fileprovider
-- **资源文件**: @xml/file_paths
-
-## 构建输出
-
-### APK 信息
-- **Debug APK 大小**: 5.9MB
-- **输出路径**: `app/build/outputs/apk/debug/app-debug.apk`
-- **应用包名**: com.example.xnote
-- **版本号**: 1.0 (versionCode: 1)
-
-## 编译命令
-
-### 环境设置
+### 开发构建
 ```bash
-export GRADLE_HOME=~/gradle/gradle-7.6
-export PATH=$GRADLE_HOME/bin:$PATH
-```
+# 调试版本构建
+./gradlew assembleDebug
 
-### 构建命令
-```bash
 # 清理构建
-gradle clean
+./gradlew clean
 
-# 构建 Debug APK
-gradle assembleDebug
+# 运行测试
+./gradlew test
 
-# 完整构建流程
-gradle clean assembleDebug
+# 安装调试版本
+./gradlew installDebug
 ```
 
-## 已知问题及解决方案
-
-### 1. Kotlin 标准库版本冲突
-**问题**: 不同依赖引入了不同版本的 Kotlin 标准库导致重复类错误
-
-**解决方案**: 使用 `resolutionStrategy` 强制统一版本
-```gradle
-configurations.all {
-    resolutionStrategy {
-        force 'org.jetbrains.kotlin:kotlin-stdlib:1.7.10'
-        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10'
-        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10'
-    }
-}
-```
-
-### 2. Java 17 模块系统兼容性
-**问题**: Java 17 的模块系统限制导致反射访问失败
-
-**解决方案**: 添加 JVM 参数开放必要的包访问权限
-
-### 3. 字符串资源格式化
-**问题**: 包含格式化占位符的字符串资源警告
-
-**解决方案**: 添加 `formatted="false"` 属性
-
-## 环境搭建步骤
-
-1. **安装 Java 17**
-2. **下载并配置 Gradle 7.6**
-3. **设置环境变量**
-4. **配置 Android SDK (API 33)**
-5. **安装 Build Tools 30.0.3**
-6. **克隆项目并执行构建**
-
-## 验证构建环境
-
-运行以下命令验证环境配置正确：
+### 发布构建
 ```bash
-java -version
-gradle --version
-echo $GRADLE_HOME
-echo $PATH | grep gradle
+# 发布版本构建
+./gradlew assembleRelease
+
+# 生成签名 APK
+./gradlew bundleRelease
+
+# 检查依赖
+./gradlew dependencies
 ```
+
+### 代码质量检查
+```bash
+# Lint 检查
+./gradlew lint
+
+# Kotlin 编译检查
+./gradlew compileDebugKotlin
+```
+
+## 📱 设备兼容性
+
+### Android 版本支持
+```
+Android 7.0 (API 24) - 最低版本
+Android 7.1 (API 25) - 支持
+Android 8.0 (API 26) - 支持
+Android 8.1 (API 27) - 支持
+Android 9.0 (API 28) - 支持
+Android 10 (API 29) - 支持
+Android 11 (API 30) - 支持
+Android 12 (API 31) - 支持
+Android 13 (API 33) - 目标版本
+```
+
+### 设备架构支持
+- **ARM64-v8a**: 主要支持（64位ARM）
+- **ARM-v7a**: 兼容支持（32位ARM）
+- **x86_64**: 模拟器支持
+- **x86**: 模拟器兼容
+
+## 📋 版本兼容性矩阵
+
+| 组件 | 最低版本 | 推荐版本 | 最新测试版本 |
+|------|----------|----------|--------------|
+| Java | 8 | 17 | 17 |
+| Gradle | 7.4 | 7.6 | 8.0 |
+| Android Studio | 2022.1 | 2022.3 | 2023.1 |
+| Kotlin | 1.7.0 | 1.7.10 | 1.8.0 |
+| Android SDK | 24 | 33 | 34 |
 
 ---
 
-**文档更新时间**: 2025-09-01  
-**项目版本**: 1.0  
-**构建状态**: ✅ 编译成功
+*本文档随项目更新而持续维护，最后更新: 2024年*
